# ilbmtoicon

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  ilbmtoicon.c  infoinfo.c
